fix(multi-select): Fixed bubbling change event and text overflow

--- a/src/ws-multi-select/ws-multi-select.scss
+++ b/src/ws-multi-select/ws-multi-select.scss
@@ -7,6 +7,10 @@
     .text {
       display: inline-block;
       vertical-align: middle;
+      max-width: 85%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .icon {
       float: right;
